--- a/Contact.css
+++ b/Contact.css
@@ -137,8 +137,6 @@ color:#8B6E80;
      position: absolute;
   }
 
-  
-
 
 .ContactDes{
   left: 99px; 
@@ -197,38 +195,47 @@ color:#8B6E80;
 
 
   /* Desktop screens (min-width: 1200px) */
-@media only screen and (min-width: 1200px) {
-  /* Adjust styles for large screens here */
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {  
+ /* Media query for 1024px and more */
+@media only screen and (min-width: 1024px) {
+  /* Add your styles here */
   .CTA {
-    font-size: 30px; /* Increase font size for larger screens */
-    position: absolute;
+    width: 600px; /* Adjust the width of the CTA button */
   }
+  
+  .Image1 {
+    width: 350px; /* Adjust the width of the Image1 */
+    left: 650px; /* Adjust the left position of the Image1 */
+  }
+  
   .Image7 {
-    width: 369px; 
-    height: 170.14px; 
-    left: 1px; 
-    top: 2px;
-     position: absolute;
+    width: 350px; /* Adjust the width of the Image7 */
   }
-
+  
   .ContactDes {
-    font-size: 100px; /* Increase font size for larger screens */
-    position: absolute;
-
+    left: auto;
+    font-size: 20px; /* Adjust the font size of the ContactDes */
   }
+  
   .ContactText {
-    font-size: 25px; /* Increase font size for larger screens */
-    position: absolute;
-
+  
+    left: auto;
+    width: 500px; /* Adjust the width of the ContactText */
   }
+  
   .contact-info {
-    font-size: 35px; /* Increase font size for larger screens */
-    position: absolute;
+    width: 1000px;
+    font-size: 20px; /* Adjust the width of the contact-info */
+    left: 20px;
+  }
+  
+  .Vector7 {
+    width: 100%; /* Adjust the width of the Vector7 */
+    top: 420px;
+    left: auto;
+  }
+}
 
-  }
-  .BackgroundBaseColor{
-    
-  }
 }
 
   /* Mobile screens (max-width: 767px) */
