--- a/About.css
+++ b/About.css
@@ -8,9 +8,6 @@ body {
         margin: 0;
         padding: 0;
         color:#839A8D;
-        
-    
-    
 }
 
 
@@ -96,7 +93,10 @@ p {
     height: 40px;
     /* Remove position absolute to allow flexbox alignment */
   }
-  
+  .Image1{
+    top: 20px;
+    position: absolute;
+  }
   
   .nav__links{
       display: inline-block;
@@ -105,7 +105,7 @@ p {
   }
   .nav__links li {
   
-      margin-left: 20px; /* Adjust as needed */
+      margin-left: 80px; /* Adjust as needed */
       display: inline-block;
       padding: 0px 20px;
       
@@ -124,10 +124,10 @@ p {
   }
 
   .Vector7 {
-    width: 100%; 
+    width: 2750%; 
     height: 0px; 
     left: 20px; 
-    top: 115px; 
+    top: 55px; 
     position: absolute; 
     border: 3px white solid;
   }
