--- a/Contact.css
+++ b/Contact.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-  background: linear-gradient(to bottom, #839A8D 31.01%, #8B6E80 100%); /* Adjust gradient colors as needed */
+  background-color: #d9fdeb;
   display: flex;
   flex-direction: column;
 }
@@ -27,7 +27,7 @@ body {
 
 
   .CTA {
-    color: white; 
+    color: #004d4d;
     width: 500px;
     font-size: 25px; 
     font-family: Modern Sans; 
@@ -40,7 +40,8 @@ body {
     letter-spacing: 2.97px;
     margin-top: 400px; /* Add this line to move it up more */
     padding: 50px; 
-    text-decoration: none!important;
+    text-decoration:none;
+  
   }
 
 
@@ -57,7 +58,8 @@ body {
 .nav__links li a {
   transition: all 0.3s ease 0s;
   text-align: left;
-  color: white; /* Add this line to set the link color to white */
+  color: #004d4d;
+  /* Add this line to set the link color to white */
   text-decoration: none;
 
 }
@@ -84,8 +86,7 @@ color:#8B6E80;
     left: 1500px;
      top: 40px; 
      position: absolute; 
-     background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) 0%, rgba(102, 102, 102, 0.25) 100%); 
-     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+  
      flex-direction: column; 
     justify-content: flex-start; 
   
@@ -95,8 +96,8 @@ color:#8B6E80;
 
   .Image1:hover{
     animation: shake 0.5s ease-in-out; 
-    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25); /* increase box shadow on hover */
-    opacity: 1; /*  keep the element visible */
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25); /* increase box shadow on hover */
+    color: #004d4d;
 
   }
 
@@ -141,7 +142,7 @@ color:#8B6E80;
   left: 99px; 
   top: 250px; 
   position: absolute; 
-  color: white; 
+  color: #004d4d; 
   font-size: 80px; 
   font-family: Modern Sans; 
   font-weight: 500; 
@@ -154,7 +155,7 @@ color:#8B6E80;
   top: 350px; 
   position: absolute; 
   text-align: justify; 
-  color: white; 
+  color: #004d4d; 
   font-size: 20px; 
   font-family: Modern Sans; 
   font-weight: 500; 
@@ -167,7 +168,7 @@ color:#8B6E80;
     position: absolute;
     left: 100px;
     top: 480px;
-    color: white; 
+    color: #004d4d; 
     font-size: 30px; 
     font-family: Modern Sans; 
     font-weight: 500; 
@@ -175,7 +176,7 @@ color:#8B6E80;
 }
 .contact-info a {
 
-   color:#814269; /* LinkedIn Blue */
+   color:#21fafa; /* LinkedIn Blue */
    text-decoration: none;
 }
 .contact-info a:hover {
@@ -189,7 +190,7 @@ color:#8B6E80;
   left: 20px; 
   top: 405px; 
   position: absolute; 
-  border: 2px white solid;
+  border: 2px #004d4d solid;
   }
 
 
@@ -244,7 +245,6 @@ color:#8B6E80;
     top: 230px;
     right: -55px;
     position: absolute;
-    color: white;
     font-size: 20px;
     font-family: Modern Sans;
     font-weight: 500;
@@ -274,7 +274,6 @@ color:#8B6E80;
     top: 200px;
     font-size: 30px; /* Increase font size for larger screens */
     position: absolute;
-    color: white;
     font-family: modern Sans;
     font-weight: 500;
     word-wrap: break-word;
@@ -284,7 +283,7 @@ color:#8B6E80;
   left: 20px; 
   top: 250px; 
   position: absolute; 
-  color: white; 
+
   font-size: 15px; 
   font-family: Modern Sans; 
   font-weight: 500; 
@@ -304,7 +303,6 @@ color:#8B6E80;
     left: 20px;
     top: 320px;
     position: absolute;
-    border: 2px white solid;
   }
 }
 
