--- a/Contact.css
+++ b/Contact.css
@@ -241,16 +241,6 @@ color:#8B6E80;
   /* Mobile screens (max-width: 767px) */
 @media only screen and (max-width: 767px) {
   /* Adjust styles for small screens here */
-  html, body {
-    height: 100%;
-    margin: 0;
-  }
-  
-  body {
-    background-color: #d9fdeb;
-    display: flex;
-    flex-direction: column;
-  }
   .CTA {
     top: 230px;
     right: -55px;
@@ -331,5 +321,147 @@ color:#8B6E80;
   }
   .contact-info {
     font-size: 30px; /* Decrease font size for medium screens */
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1618px) {
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+  body {
+    background-color: #d9fdeb;
+    display: flex;
+    flex-direction: column;
+  }
+  .CTA {
+    top: 230px;
+    right: -55px;
+    position: absolute;
+    font-size: 20px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    letter-spacing: 2.97px;
+    word-wrap: break-word;
+  }
+  .Image1 {
+    width: 114px;
+    height: 60px;
+    left: 20px;
+    top: 30px;
+    position: absolute;
+  
+  }
+
+  .Image7{
+    width: 113px;
+    height: 58px;
+    left: 4px;
+    top: 3px;
+    position: absolute;
+
+  }
+
+  .ContactDes {
+    left: 20px;
+    top: 200px;
+    font-size: 30px; /* Increase font size for larger screens */
+    position: absolute;
+    font-family: modern Sans;
+    font-weight: 500;
+    word-wrap: break-word;
+  }
+  .ContactText {
+    width: 250px; 
+  left: 20px; 
+  top: 250px; 
+  position: absolute; 
+
+  font-size: 15px; 
+  font-family: Modern Sans; 
+  font-weight: 500; 
+  word-wrap: break-word;
+
+  }
+  .contact-info {
+   position: absolute;
+    width: 100%;
+    font-size: 18px;
+    top: 450px;
+    left: 10px;
+  }
+  .Vector7{
+    width: 59%;
+    height: 0px;
+    left: 20px;
+    top: 320px;
+    position: absolute;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .CTA {
+    top: 230px;
+    right: -55px;
+    position: absolute;
+    font-size: 20px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    letter-spacing: 2.97px;
+    word-wrap: break-word;
+  }
+  .Image1 {
+    width: 114px;
+    height: 60px;
+    left: 20px;
+    top: 30px;
+    position: absolute;
+  
+  }
+
+  .Image7{
+    width: 113px;
+    height: 58px;
+    left: 4px;
+    top: 3px;
+    position: absolute;
+
+  }
+
+  .ContactDes {
+    left: 20px;
+    top: 200px;
+    font-size: 30px; /* Increase font size for larger screens */
+    position: absolute;
+    font-family: modern Sans;
+    font-weight: 500;
+    word-wrap: break-word;
+  }
+  .ContactText {
+    width: 250px; 
+  left: 20px; 
+  top: 250px; 
+  position: absolute; 
+
+  font-size: 15px; 
+  font-family: Modern Sans; 
+  font-weight: 500; 
+  word-wrap: break-word;
+
+  }
+  .contact-info {
+   position: absolute;
+    width: 100%;
+    font-size: 18px;
+    top: 450px;
+    left: 10px;
+  }
+  .Vector7{
+    width: 59%;
+    height: 0px;
+    left: 20px;
+    top: 320px;
+    position: absolute;
   }
 }
