--- a/Contact.css
+++ b/Contact.css
@@ -244,9 +244,9 @@ color:#8B6E80;
 }
 
 /* iPhone 12 Pro Max, 13 Pro Max, 14 Pro Max, 15 Pro Max (Screen width: 430px) */
-@media only screen and (min-device-width: 430px) and (max-device-width: 430px) and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (max-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) {  
   .CTA {
-    font-size: 20px;
+  font-size: 20px;
     padding: 40px;
     margin-top: 680px;
     position: absolute;
@@ -294,90 +294,55 @@ color:#8B6E80;
   }
 }
 
-/* Small Phones (e.g., iPhone SE (2nd and 3rd gen), screen width: 375px) */
-@media only screen and (max-device-width: 375px) and (-webkit-device-pixel-ratio: 2) {
-  .CTA {
-    font-size: 16px;
-    padding: 20px;
-    margin-top: 200px;
-    width: 280px;
-  }
-  .Image1 {
-    width: 80px;
-    height: 40px;
-    left: 5px;
-    top: 15px;
-  }
-  .Image7 {
-    width: 80px;
-    height: 40px;
-    left: 3px;
-    top: 5px;
-  }
-  .ContactDes {
-    font-size: 30px;
-    left: 5px;
-    top: 100px;
-  }
-  .ContactText {
-    width: 200px;
-    left: 5px;
-    top: 150px;
-    font-size: 14px;
-  }
-  .contact-info {
-    width: 200px;
-    font-size: 16px;
-    left: 5px;
-    top: 250px;
-  }
-  .Vector7 {
-    width: 80%;
-    left: 10%;
-    top: 180px;
-  }
+/* IPhone 14-15 Pro max queries---------------------------------------------------------------------------*/
+
+@media only screen and (max-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) {
+  .CTA{
+  font-size: 20px;
+  padding: 40px;
+  margin-top: 680px;
+  position: absolute;
+  width: 400px;
+}
+.Image1 {
+  width: 120px;
+  height: 0;
+  left: 15px;
+  top: 0;
+  position: absolute;
+}
+.Image7 {
+  width: 120px;
+  height: 100px;
+  left: 10px;
+  top: 0;
+  position: absolute;
+}
+.ContactDes {
+  font-size: 50px;
+  left: 20px;
+  top: 150px;
+  position: absolute;
+}
+.ContactText {
+  width: 350px;
+  left: 20px;
+  top: 230px;
+  font-size: 18px;
+  position: absolute;
+}
+.contact-info {
+  width: 350px;
+  font-size: 20px;
+  left: 20px;
+  top: 410px;
+  position: absolute;
+}
+.Vector7 {
+  width: 95%;
+  left: 2.5%;
+  position: absolute;
+  top: 290px;
 }
 
-/* Extra Small Phones (e.g., older small devices, screen width: 320px) */
-@media only screen and (max-device-width: 320px) and (-webkit-device-pixel-ratio: 2) {
-  .CTA {
-    font-size: 14px;
-    padding: 15px;
-    margin-top: 150px;
-    width: 260px;
-  }
-  .Image1 {
-    width: 70px;
-    height: 35px;
-    left: 3px;
-    top: 10px;
-  }
-  .Image7 {
-    width: 70px;
-    height: 35px;
-    left: 2px;
-    top: 3px;
-  }
-  .ContactDes {
-    font-size: 25px;
-    left: 3px;
-    top: 80px;
-  }
-  .ContactText {
-    width: 180px;
-    left: 3px;
-    top: 120px;
-    font-size: 12px;
-  }
-  .contact-info {
-    width: 180px;
-    font-size: 14px;
-    left: 3px;
-    top: 200px;
-  }
-  .Vector7 {
-    width: 70%;
-    left: 15%;
-    top: 150px;
-  }
 }
